# multithreaded-rooks-walks

./: .gitignore  CMakeLists.txt  README.md  run.sh  script-build.sh
src/: CMakeLists.txt  board.cpp  board.hpp  figure.hpp  game_context.hpp  main.cpp  multithreaded_rooks_strategy.cpp  multithreaded_rooks_strategy.hpp  random.hpp  rook.cpp  rook.hpp  strategy.hpp
